--- a/git-haskell-org-hooks.cabal
+++ b/git-haskell-org-hooks.cabal
@@ -13,11 +13,12 @@ executable submodchecker
   default-language:    Haskell2010
   hs-source-dirs:      src
   main-is:             validate-submod-refs.hs
+  other-modules: Common
 
   build-depends:
-    base    >=4.5 && <4.9,
-    deepseq >= 1.1 && <1.5,
-    shelly  >=1.5 && <1.6,
+    base    >=4.5  && <4.9,
+    deepseq >=1.1  && <1.5,
+    shelly  >=1.5  && <1.6,
     text    >=0.11 && <1.3
 
-  ghc-options:         -Wall
+  ghc-options: -Wall
