--- a/git-haskell-org-hooks.cabal
+++ b/git-haskell-org-hooks.cabal
@@ -22,3 +22,18 @@ executable submodchecker
     text    >=0.11 && <1.3
 
   ghc-options: -Wall
+
+
+executable validate-commit-msg
+  default-language:    Haskell2010
+  hs-source-dirs:      src
+  main-is:             validate-commit-msg.hs
+
+  build-depends:
+    base    >=4.5  && <4.9,
+    deepseq >=1.1  && <1.5,
+    mtl     >=2.1  && <2.3,
+    shelly  >=1.5  && <1.6,
+    text    >=0.11 && <1.3
+
+  ghc-options: -Wall
