--- a/git-haskell-org-hooks.cabal
+++ b/git-haskell-org-hooks.cabal
@@ -37,3 +37,17 @@ executable validate-commit-msg
     text    >=0.11 && <1.3
 
   ghc-options: -Wall
+
+executable validate-whitespace
+  default-language:    Haskell2010
+  hs-source-dirs:      src
+  main-is:             validate-whitespace.hs
+
+  build-depends:
+    base    >=4.5  && <4.9,
+    deepseq >=1.1  && <1.5,
+    mtl     >=2.1  && <2.3,
+    shelly  >=1.6  && <1.7,
+    text    >=0.11 && <1.3
+
+  ghc-options: -Wall
